# telegram-deepl-bot

./: Dockerfile  README.md  api.env  bot.py  db.py  docker-compose.yml  portfolio.json  pyproject.toml
